--- a/package.json
+++ b/package.json
@@ -1,32 +1,38 @@
 {
-  "name": "frameworkless-views",
-  "version": "0.2.0",
-  "description": "View management for Frameworkless.",
-  "main": "demo-server.js",
+  "name": "frameworkless-view",
+  "version": "0.5.0",
+  "description": "A View-Presenter implementation for Frameworkless.",
+  "main": "dist/view.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node demo-server.js"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
-    "url": "ssh://git@stash.corp.synacor.com:7999/apla/frameworkless-views.git"
+    "url": "https://stash.corp.synacor.com/scm/apla/frameworkless-view.git"
   },
-  "author": "jsimpson@synacor.com",
+  "authors": [
+    "James Simpson <jsimpson@synacor.com>",
+    "Jason Miller <jasonmiller@synacor.com>"
+  ],
   "license": "Closed-Source",
   "dependencies": {
-    "express": "~3.4.8"
+    "compression": "^1.3.0",
+    "serve-static": "^1.8.0"
   },
   "readmeFilename": "README.md",
   "directories": {
     "doc": "docs"
   },
   "devDependencies": {
-    "grunt-contrib-uglify": "~0.3.1",
+    "express": "~4.10.7",
     "grunt": "^0.4.5",
-    "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-jshint": "~0.8.0",
+    "grunt-contrib-copy": "~0.7.0",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-uglify": "~0.7.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-jsdoc": "^0.5.7",
     "grunt-jsdoc-plugin": "~0.1.4",
-    "grunt-jsdoc": "^0.5.4",
-    "jsdoc": "^3.3.0-alpha5"
+    "jsdoc": "^3.3.0-alpha13"
   }
 }
